--- a/HW2/igg_image/CMakeLists.txt
+++ b/HW2/igg_image/CMakeLists.txt
@@ -5,7 +5,7 @@
 project(initial_matrix)
 cmake_minimum_required(VERSION 3.1)
 
-set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_CXX_STANDARD 17)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -18,6 +18,8 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
 include_directories(${PROJECT_SOURCE_DIR}/src)
+
+add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
 
 add_subdirectory(src)
 enable_testing()
