--- a/HW2/igg_image/src/CMakeLists.txt
+++ b/HW2/igg_image/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(igg_image)
 
 #executable
+add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
 add_executable(main main.cpp)
 target_link_libraries(main image)
