--- a/HW2/igg_image/src/CMakeLists.txt
+++ b/HW2/igg_image/src/CMakeLists.txt
@@ -4,3 +4,6 @@ add_subdirectory(igg_image)
 add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
 add_executable(main main.cpp)
 target_link_libraries(main image)
+
+add_executable(main2 main2.cpp)
+target_link_libraries(main2 image)
