okay.. we are building

--- a/HW3/igg_image/src/igg_image/CMakeLists.txt
+++ b/HW3/igg_image/src/igg_image/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_subdirectory(io_strategies)
 
+add_library(image STATIC image.cpp)
+target_link_libraries(image strategies)
 # TODO: create image library from image.cpp.
 # TODO: link image library to any other libraries if needed.
