--- a/HW3/igg_image/src/igg_image/io_strategies/CMakeLists.txt
+++ b/HW3/igg_image/src/igg_image/io_strategies/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(strategies
-            # TODO: Add other files here when needed.
+            png_strategy.cpp
             dummy_strategy.cpp)
-# TODO: link strategies against needed libraries.
+
+target_link_libraries(strategies
+                      ${PNG_LIBRARIES})
