--- a/HW3/igg_image/CMakeLists.txt
+++ b/HW3/igg_image/CMakeLists.txt
@@ -14,6 +14,8 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 
+add_definitions(-DDATA_PATH="${PROJECT_SOURCE_DIR}/data")
+
 include_directories(${PROJECT_SOURCE_DIR}/src)
 
 add_subdirectory(src)
