--- a/HW3/igg_image/tests/CMakeLists.txt
+++ b/HW3/igg_image/tests/CMakeLists.txt
@@ -6,7 +6,7 @@ add_executable(
  ${TEST_BINARY}
  test_init.cpp
  test_resize.cpp
- # test_dummy_strategy.cpp
+ test_dummy_strategy.cpp
  # test_histogram.cpp
  # test_from_ppm.cpp
  test_from_png.cpp
