--- a/HW3/igg_image/tests/CMakeLists.txt
+++ b/HW3/igg_image/tests/CMakeLists.txt
@@ -7,9 +7,9 @@ add_executable(
  test_init.cpp
  test_resize.cpp
  test_dummy_strategy.cpp
- # test_histogram.cpp
+ test_histogram.cpp
  # test_from_ppm.cpp
- test_from_png.cpp
+ test_png_strategy.cpp
  test_clone.cpp
 )
 target_link_libraries(${TEST_BINARY}
