--- a/HW3/igg_image/src/igg_image/io_strategies/CMakeLists.txt
+++ b/HW3/igg_image/src/igg_image/io_strategies/CMakeLists.txt
@@ -2,7 +2,9 @@ find_package(PNG REQUIRED)
 
 add_library(strategies
             png_strategy.cpp
-            dummy_strategy.cpp)
+            dummy_strategy.cpp
+            ppm_strategy.cpp
+            )
 
 target_link_libraries(strategies
                       ${PNG_LIBRARIES})
